Bendy Bones: Custom Handle References not being cleared when bone deleted #48470

Closed
opened 2016-05-19 17:25:00 +02:00 by Cody Winchester · 6 comments

Blender Version
2.77.0 Hash: 6988061

When a bone gets deleted that is being used as a custom handle reference the settings don't get cleared and the other bone still deforms as if the handle bone was not deleted.

Exact steps for others to reproduce the error
https://www.dropbox.com/s/k7v9xluhhywmky3/Bbone%20Failing.blend?dl=0

In this file if you go into edit mode and delete the "Custom Handle" bone, the "Bbone" bone will still have the first bone set as a custom handle and will bend towards it as if it wasn't deleted.

**Blender Version** 2.77.0 Hash: 6988061 When a bone gets deleted that is being used as a custom handle reference the settings don't get cleared and the other bone still deforms as if the handle bone was not deleted. **Exact steps for others to reproduce the error** https://www.dropbox.com/s/k7v9xluhhywmky3/Bbone%20Failing.blend?dl=0 In this file if you go into edit mode and delete the "Custom Handle" bone, the "Bbone" bone will still have the first bone set as a custom handle and will bend towards it as if it wasn't deleted.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @CodyWinchester

Added subscriber: @CodyWinchester
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Confirmed.

Poking around, it looks like we've got a few other things that may suffer from similar kinds of bugs. Surprisingly/luckily, we don't seem to be getting any crashes from this yet, which is somewhat disconcerting.

Confirmed. Poking around, it looks like we've got a few other things that may suffer from similar kinds of bugs. Surprisingly/luckily, we don't seem to be getting any crashes from this yet, which is somewhat disconcerting.
Joshua Leung self-assigned this 2016-05-20 02:41:09 +02:00

This issue was referenced by 6e416b6bdf

This issue was referenced by 6e416b6bdf283f2337b962c05f93781eac00ff18
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48470
No description provided.